@@ -3,8 +3,8 @@
 #   `versions` below.
 # * When publishing a new blog post, we need to append an item to `news` below.
 latest_stable:
-  version: 1.3.0
-  jira_version: 12339183
+  version: 1.3.1
+  jira_version: 12340495
 news:
 ## * If the news is used to announce a release version, the item structure is
 ##   - title: (required)
@@ -15,6 +15,9 @@ news:
 ##   - title: (required)
 ##     date: (required)
 ##     blog: (required)
+  - title: Mesos 1.3.1 is released!
+    date: August 15, 2017
+    blog: mesos-1-3-1-released
   - title: Mesos 1.2.2 is released!
     date: August 11, 2017
     blog: mesos-1-2-2-released
@@ -135,6 +138,8 @@ versions:
 ##                 after we create the ReleaseNote for 0.28.1, we get the link:
 ##                 https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311242&version=12335359.
 ##                 At here, 12335359 is the jira_version of 0.28.1.
+  - version: 1.3.1
+    jira_version: 12340495
   - version: 1.2.2
     jira_version: 12340461
   - version: 1.3.0
